app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-deployement
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8888
  type: ClusterIP
